<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp">


    <TextView
        android:id="@+id/baseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_space_ship"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/rootNestedView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputParent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/give_a_name_to_your_ship"
                app:endIconDrawable="@drawable/ic_baseline_clear_24"
                app:endIconMode="clear_text"
                app:expandedHintEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/totalPointText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:text="@string/total_point_info_text"
                    android:layout_marginTop="24dp"/>



            <LinearLayout
                android:id="@+id/velocityContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="36dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/velocity"
                        android:textColor="@color/material_black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/velocityCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:textColor="@color/material_black"
                        android:textSize="18sp"
                        tools:text="2" />

                </LinearLayout>

                <com.google.android.material.slider.Slider
                    android:id="@+id/velocityBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1.0"
                    android:valueFrom="0.0"
                    android:valueTo="15.0" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/capacityContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="36dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/material_capacity"
                        android:textColor="@color/material_black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/capacityCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:textColor="@color/material_black"
                        android:textSize="18sp"
                        tools:text="2" />

                </LinearLayout>

                <com.google.android.material.slider.Slider
                    android:id="@+id/capacityBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1.0"
                    android:valueFrom="0.0"
                    android:valueTo="15.0" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/strengthContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="36dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strength"
                        android:textColor="@color/material_black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/strengthCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:textColor="@color/material_black"
                        android:textSize="18sp"
                        tools:text="2" />

                </LinearLayout>

                <com.google.android.material.slider.Slider
                    android:id="@+id/strengthBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1.0"
                    android:valueFrom="0.0"
                    android:valueTo="15.0" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/applyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/apply"
                android:enabled="false"
                android:textAllCaps="false"
                app:cornerRadius="8dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>